# ftvp

./: .gitignore  CMakeLists.txt  README.md
bindings/python3/: installPythonPackage
bindings/python3/pyftvp/: _ftvp.pyx  pyftvp.py
src/: ftvp-color.cu  ftvp.cu  memory-color.cu  memory-color.cuh  memory.cu  memory.cuh
